<resources>
    <string name="app_name">Intelligent Green House</string>

    <string name="device">Devices</string>

    <string name="home">Home</string>
    <string name="analytics">Statistics</string>
    <string name="notifications">Notifications</string>

    <string name="temperature">Temperature</string>
    <string name="moisture">Moisture</string>
    <string name="water_level">Water level</string>
    <string name="cam_coder">Stream</string>

    <string name="sprinkler">Sprinkler</string>
    <string name="water_pump">Water pump</string>
    <string name="fan">Ventilation fan</string>


    <string name="sample_temp">--</string>
    <string name="cel_symbol">&#176;C</string>

    <string name="sample_moist">--</string>
    <string name="moist_symbol">&#x0025;</string>

    <string name="text_on">ON</string>
    <string name="text_off">OFF</string>

    <string name="sample_level">--</string>
    <string name="level_symbol"> L</string>
    <string name="water_label">Water level </string>

    <string name="daily">Daily</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="weakly">Weakly</string>

    <string name="temperature_input">Temperature</string>
    <string name="moisture_input">Moisture</string>

    <string name="threshold_dialog_title">Edit system\'s threshold values</string>
    <string name="accept_hint">Save</string>
    <string name="cancel_hint">Cancel</string>
    <string name="back_hint">Back home</string>

    <string name="notification_title">Temperature sensor</string>
    <string name="notification_message">Temperature has reached 33&#176;C beyond the threshold of 28&#176;C</string>
    <string name="mark_as_read">Mark as Read</string>
    <string name="notification_time">12 Jan 2019, 14:30:32</string>

    <string name="please_wait">Please wait &#8230;</string>
    <string name="not_found">There is not data at the moment</string>
    <string name="url_error">Can\'t not stream at this moment</string>
    <string name="stop_steam">Stop stream</string>
    <string name="start_steam">Stream stream</string>

    <string name="start_publishing">Start publishing</string>
    <string name="stop_publishing">Stop publishing</string>
    <string name="started_publishing">Publishing started</string>
    <string name="stopped_publishing">Publishing stopped</string>
    <string name="disconnected_publishing">Publishing disconnected</string>
    <string name="failed_publishing">Failed to connect</string>

    <string name="error_empty_url">url is empty</string>

    <string name="publishing_label">LIVE  %1$s:%2$s</string>

    <string name="connected">Connected</string>
    <string name="not_connected">Not Connected</string>
    <string name="refresh">Press to refresh</string>
    <string name="todo">TODO</string>
    <string name="analysis">ANALYSIS</string>
    <string name="setup">DEVICE PARAMETERS</string>
    <string name="select_date">Select Relative Date</string>
    <string name="tank_level">Tank Level</string>
</resources>
