<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_small"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/card_radius"
    app:cardBackgroundColor="@color/gray">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="@dimen/margin_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/white"
            android:text="@string/notification_title"
            android:id="@+id/noty_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/white"
            android:text="@string/notification_time"
            android:textSize="@dimen/font_normal"
            android:id="@+id/noty_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
            app:layout_constraintTop_toBottomOf="@id/noty_title"
            android:id="@+id/noty_msg"
            android:layout_marginTop="@dimen/margin_small"
            android:textAlignment="viewStart"
            android:text="@string/notification_message"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-light"
            android:textSize="@dimen/font_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            app:layout_constraintTop_toBottomOf="@id/noty_msg"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/read_btn"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/mark_as_read"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/input_height"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>