<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dark">

    <TextView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/margin_small"
        android:textSize="@dimen/font_big"
        android:textColor="@color/colorPrimary"
        android:fontFamily="sans-serif-light"
        android:id="@+id/sensor_hint"
        android:textStyle="bold"
        android:text="@string/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sensor_hint"
        android:layout_marginStart="@dimen/margin_small"
        android:textSize="@dimen/font_xbig"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-black"
        android:id="@+id/temp_reading"
        android:text="@string/sample_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <TextView
        app:layout_constraintStart_toEndOf="@id/temp_reading"
        app:layout_constraintTop_toBottomOf="@+id/sensor_hint"
        android:layout_marginStart="@dimen/margin_small"
        android:textSize="@dimen/font_big"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-black"
        android:id="@+id/temp_symbol"
        android:text="@string/cel_symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>