<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.AppBarLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/gray"
    android:layout_height="?android:attr/actionBarSize"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/verify_toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/connection_holder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/refresh"
                    android:layout_width="@dimen/icon_small"
                    android:layout_height="@dimen/icon_small"
                    android:contentDescription="@string/back_hint"
                    android:src="@drawable/ic_refresh"
                    android:tint="@color/ligh_gray" />

                <TextView
                    android:id="@+id/refresh_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/refresh"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_normal"
                    android:textStyle="normal" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/connection_refresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/connection_image"
                    android:layout_width="@dimen/icon_small"
                    android:layout_height="@dimen/icon_small"
                    android:contentDescription="@string/back_hint"
                    android:src="@drawable/ic_hardware"
                    android:tint="@color/ligh_gray" />

                <TextView
                    android:id="@+id/connection_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/not_connected"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_normal"
                    android:textStyle="normal" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.appcompat.widget.Toolbar>

</com.google.android.material.appbar.AppBarLayout>
